# SnapInk

./: .gitignore  CLAUDE.md  README.md  TODOS.md  plan-scroll.md  plan-ui.md  research-scroll.md
.claude/docs/: plan-v1.md  plan-v2.md  research-ssa.md
app/: package-lock.json  package.json
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: capture.rs  capture_store.rs  clipboard.rs  export.rs  lib.rs  main.rs  ocr.rs  pin.rs  scroll.rs  settings.rs  stitch.rs  types.rs
app/src/lib/: AnnotationEngine.ts  ContextualBar.svelte  stores.svelte.ts  types.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/capture/: +page.svelte
app/src/routes/pin/: +page.svelte
app/src/routes/scroll-control/: +page.svelte
app/src/routes/settings/: +page.svelte
