[package]
name = "snapink"
version = "0.1.0"
description = "SnapInk - Screenshot Annotation Tool"
authors = ["SnapInk"]
edition = "2021"

[lib]
name = "snapink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9.1"
base64 = "0.22.1"
image = "0.25.10"
dirs = "6.0.0"
