[package]
name = "snapink"
version = "0.1.0"
description = "SnapInk - Screenshot Annotation Tool"
authors = ["SnapInk"]
edition = "2021"

[lib]
name = "snapink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9.1"
base64 = "0.22.1"
image = "0.25.10"
dirs = "6.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSArray", "NSDictionary", "NSString"] }
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRequestHandler", "VNRecognizeTextRequest", "VNObservation", "VNRequestRevisionProviding"] }
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGDataProvider", "CGDirectDisplay", "CGDisplayConfiguration", "CGWindow"] }
